# DotFileManager

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/dotfilemgr/: common.py
src/dotfilemgr/parsers/: parser.py  toml.py
tests/: conftest.py
tests/fixtures/: setup.toml
