[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dotfile-mgr"
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"   # makes isort compatible with black's import style

[tool.pytest.ini_options]
testpaths = ["tests"]
